X overflow fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,6 +7,7 @@
     padding-right: 15%;
     padding-bottom: 5%;
     padding-left: 15%;
+    box-sizing: border-box;
   }
 
   #text {
